--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,16 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-@theme {
-  --color-primary: #1a1a1a;
-  --color-secondary: #f0f0f0;
-}
-* {
-  font-family: 'Open Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@font-face {
+  font-family: "Archivo";
+  src: url("../../public/fonts/static/Archivo-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
+@font-face {
+  font-family: "Corinthia";
+  src: url("../../public/fonts/Corinthia-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Corinthia-Bold";
+  src: url("../../public/fonts/Corinthia-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: bold;
+  font-display: swap;
+}
+
+$font-regular: "Archivo", sans-serif;
+$font-decorative: "Corinthia", cursive;
+$font-decorative-bold: "Corinthia-Bold", cursive;
+
+@thema {
+  --font-sans: "Archivo";
+}
+
+
+$pink: #fabcf0;
+$pink-light: #fef8fd;
+$green: #628850;
+$green-dark: #384233;
+$orange: #ffa649;
+$yellow: #f8e10e;
+
+body {
+  font-family: $font-regular;
+}
 header {
   height: calc(100vh - 40px);
 }
